# BAOFENG-UV-K6-Firmware

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.MD  kd32f328xb.ld
Libraries/: CMakeLists.txt
Libraries/CMSIS/Device/: kd32f3xx.h  system_kd32f328.h
Libraries/CMSIS/Device/kd32f328xb/: kd32f328xb.h  system_kd32f328.c
Libraries/StdPeriph_Driver/inc/: KD32f328_adc.h  KD32f328_crc.h  KD32f328_dma.h  KD32f328_exti.h  KD32f328_flash.h  KD32f328_gpio.h  KD32f328_iwdg.h  KD32f328_misc.h  KD32f328_pwr.h  KD32f328_rcc.h  KD32f328_rtc.h  KD32f328_spi.h  KD32f328_tim.h  KD32f328_usart.h  KD32f328_wwdg.h  kd32f328_conf.h
Libraries/StdPeriph_Driver/src/: KD32f328_adc.c  KD32f328_crc.c  KD32f328_dma.c  KD32f328_exti.c  KD32f328_flash.c  KD32f328_gpio.c  KD32f328_iwdg.c  KD32f328_misc.c  KD32f328_pwr.c  KD32f328_rcc.c  KD32f328_spi.c  KD32f328_tim.c  KD32f328_usart.c  KD32f328_wwdg.c
cmake/: gcc-arm-none-eabi.cmake
releases/: bf_k6_firmware-5f63f83.elf  bf_k6_firmware-fcd0a62.elf
src/: CMakeLists.txt  printf_config.h  syscalls.c  system_kd32f328.c
src/App/: AppAlarm.c  AppAlarm.h  AppDtmf.c  AppDtmf.h  AppFm.c  AppFm.h  AppMain.c  AppMain.h  AppMenu.c  AppMenu.h  AppMenu_GB.c  AppMoni.c  AppMoni.h  AppScan.c  AppScan.h  AppScanQT.c  AppScanQT.h  AppSearch.c  AppSearch.h  AppStopWatch.c  AppStopWatch.h  AppStopWatch_GB.c  AppTask.c  AppTask.h  AppWeather.c  AppWeather.h  Battery.c  Battery.h  DualStandby.c  DualStandby.h  main.c  version.h
src/BSP/: Board.c  Board.h  BoardFun.c  BoardFun.h  kd32f328_it.c  kd32f328_it.h  vec_patch.c  vec_patch.h  vec_table.c  vec_table.h
src/CPS/: ProgromFlash.c  ProgromFlash.h
src/Common/: BitMap.h  Delay.c  Delay.h  Globe.c  Globe.h  PublType.h  includes.h
src/Core/: Functions.c  Functions.h  Radio.c  Radio.h  RadioTask.c  RadioTask.h
src/Driver/: AddrMap_BFK6.h  DevFD6818.c  DevFD6818.h  FlashDataMap.h  FlashFont.c  FlashFont.h  NorFlash.c  NorFlash.h  RadioDataReset.h  RadioDataStorage.c  RadioDataStorage.h  Rda5807.c  Rda5807.h  Sc5260.c  Sc5260.h  Systick.c  Systick.h  crc.c  crc.h  key_ptt.c  key_ptt.h  keyboard.c  keyboard.h
src/Gui/: DisplayBattery.c  DisplayBattery.h  DisplayCheckPassword.c  DisplayCheckPassword.h  DisplayCheckPassword_GB.c  DisplayDtmf.c  DisplayDtmf.h  DisplayFm.c  DisplayFm.h  DisplayInputbox.c  DisplayInputbox.h  DisplayMain.c  DisplayMain.h  DisplayMain_GB.c  DisplayMenu.c  DisplayMenu.h  DisplayMenu_GB.c  DisplayPowerOn.c  DisplayPowerOn.h  DisplayScanQT.c  DisplayScanQT.h  DisplaySearch.c  DisplaySearch.h  DisplaySearch_GB.c  DisplayWeather.c  DisplayWeather.h  LcdFillDot.c  LcdFillDot.h
src/Interface/: i2c.c  i2c.h
src/Voice/: Beep.c  Beep.h  VoiceBroadcast.c  VoiceBroadcast.h
